QStringConverter: clarify decode()/encode() API docs

These methods return a struct which is implicitly convertible to
QString/QByteArray respectively. Don't hide the return type from QDoc,
this simplifies telling users what those methods return exactly.

Fixes: QTBUG-117705
Change-Id: Ibb22a1e54fffce8f5f20aaabe47983870ccfba1e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 9e5df4ae5344374eaae0cbdaa526d4dd49ed3a13)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit bab635fea519447e9cadb2ed0039fb73ae3365d2)